# snowflake-summit-2025

./: .gitignore  README.md  doped-filter.sql  poc-doc.qmd  pyproject.toml  requirements.txt
dashboard/: air-quality-eda.qmd  app.R  app.py  greeting.md  requirements.txt
dashboard/python/: app.py  data_description.md  greeting.md  instructions.md  manifest.json  requirements.txt
dashboard/python/data/: air_quality_sample.csv
